--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -11,8 +11,8 @@ jobs:
       # 0 means don't use pytest-xdist
       pytest_numcpus: "4"
       # pytest-cov looks at this folder
-      pytest_cov_dir: "src"
+      pytest_cov_dir: "ocf_data_sampler"
       # extra things to install
-      sudo_apt_install: "libgeos++-dev libproj-dev proj-data proj-bin"
+      #sudo_apt_install: "libgeos++-dev libproj-dev proj-data proj-bin"
       #      brew_install: "proj geos librttopo"
       os_list: '["ubuntu-latest"]'
