--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,3 +8,4 @@ jobs:
     uses: openclimatefix/.github/.github/workflows/python-release.yml@main
     secrets:
       token: ${{ secrets.PYPI_API_TOKEN }}
+      PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
