--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,4 +5,5 @@ python:
   install:
     - method: pip
       path: .
-    - requirements: docs/requirements.txt
+    - method: pip
+      command: install -e .[docs] # Change to use pyproject.toml and set to editable mode so changes to source code can reflect without need to reinstall
