--- a/tests/test_data/configs/on_premises.yaml
+++ b/tests/test_data/configs/on_premises.yaml
@@ -2,14 +2,14 @@ general:
   description: Config for producing batches on OCF's on-premises hardware.
   name: on_premises
 input_data:
-  default_forecast_minutes: 240
-  default_history_minutes: 60
   #---------------------- GSP -------------------
   gsp:
     gsp_zarr_path: /mnt/storage_b/data/ocf/solar_pv_nowcasting/nowcasting_dataset_pipeline/PV/GSP/v3/pv_gsp.zarr
     history_minutes: 120
     forecast_minutes: 480
-    log_level: "ERROR"
+    time_resolution_minutes: 30
+    gsp_image_size_pixels_height: 18
+    gsp_image_size_pixels_width: 18
 
   #---------------------- NWP -------------------
   nwp:
@@ -30,19 +30,8 @@ input_data:
       nwp_zarr_path: /mnt/storage_ssd_8tb/data/ocf/solar_pv_nowcasting/nowcasting_dataset_pipeline/NWP/UK_Met_Office/UKV/zarr/UKV_intermediate_version_3.zarr
       forecast_minutes: 360
       history_minutes: 60
-
-  #---------------------- PV -------------------
-  pv:
-    pv_files_groups:
-      - label: solar_sheffield_passiv
-        pv_filename: /mnt/storage_b/data/ocf/solar_pv_nowcasting/nowcasting_dataset_pipeline/PV/Passiv/ocf_formatted/v0/passiv.netcdf
-        pv_metadata_filename: /mnt/storage_b/data/ocf/solar_pv_nowcasting/nowcasting_dataset_pipeline/PV/Passiv/ocf_formatted/v0/system_metadata_OCF_ONLY.csv
-      - label: pvoutput.org
-        pv_filename: /mnt/storage_b/data/ocf/solar_pv_nowcasting/nowcasting_dataset_pipeline/PV/PVOutput.org/UK_PV_timeseries_batch.nc
-        pv_metadata_filename: /mnt/storage_b/data/ocf/solar_pv_nowcasting/nowcasting_dataset_pipeline/PV/PVOutput.org/UK_PV_metadata.csv
-    history_minutes: 90
-    forecast_minutes: 360
-    log_level: "INFO"
+      time_resolution_minutes: 60
+      nwp_provider: "ukv"
 
   #---------------------- Satellite -------------
   satellite:
@@ -59,5 +48,7 @@ input_data:
       - WV_062
       - WV_073
     satellite_image_size_pixels_height: 48
-    satellite_image_size_pixels_width: 96
+    satellite_image_size_pixels_width: 48
     satellite_zarr_path: /mnt/storage_ssd_8tb/data/ocf/solar_pv_nowcasting/nowcasting_dataset_pipeline/satellite/EUMETSAT/SEVIRI_RSS/zarr/v3/eumetsat_seviri_uk.zarr
+    time_resolution_minutes: 15
+    history_minutes: 60
