collapse all common data source fields into a mixin and refactor

--- a/tests/test_data/pvnet_test_config.yaml
+++ b/tests/test_data/pvnet_test_config.yaml
@@ -5,37 +5,39 @@ general:
 input_data:
 
   gsp:
-    gsp_zarr_path: set_in_temp_file
+    zarr_path: set_in_temp_file
     history_minutes: 60
     forecast_minutes: 120
     time_resolution_minutes: 30
     dropout_timedeltas_minutes: null
     dropout_fraction: 0
+    image_size_pixels_height: 2
+    image_size_pixels_width: 2
 
   nwp:
     ukv:
-      nwp_provider: ukv
-      nwp_zarr_path: set_in_temp_file
+      provider: ukv
+      zarr_path: set_in_temp_file
       history_minutes: 60
       forecast_minutes: 120
       time_resolution_minutes: 60
-      nwp_channels:
+      channels:
         - t # 2-metre temperature
-      nwp_image_size_pixels_height: 2
-      nwp_image_size_pixels_width: 2
+      image_size_pixels_height: 2
+      image_size_pixels_width: 2
       dropout_timedeltas_minutes: [-180]
       dropout_fraction: 1.0
       max_staleness_minutes: null
 
   satellite:
-    satellite_zarr_path: set_in_temp_file
+    zarr_path: set_in_temp_file
     history_minutes: 30
     forecast_minutes: 0
     live_delay_minutes: 0
     time_resolution_minutes: 5
-    satellite_channels:
+    channels:
       - IR_016
-    satellite_image_size_pixels_height: 2
-    satellite_image_size_pixels_width: 2
+    image_size_pixels_height: 2
+    image_size_pixels_width: 2
     dropout_timedeltas_minutes: null
     dropout_fraction: 0
