--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ keywords = [ # I've added some keywords, but please provide feedback if you'd li
 
 classifiers = [
     "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.8", # Sourced from .readthedocs.yml (please advise if this is wrong!)
     "Operating System :: POSIX :: Linux", # Sourced from .github/workflows/workflows.yaml
 ]
 requires-python = ">=3.8"
