--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [ # Migration from requirements.txt
     "pyproj",
     "pathy",
     "pyaml_env",
+    "pyresample"
 ]
 
 keywords = [ # I've added some keywords, but please provide feedback if you'd like them changed!
