--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ maintainers = [
 ]
 
 dependencies = [ # Migration from requirements.txt
-    "torch<2.5.0",
+    "torch",
     "numpy",
     "pandas",
     "xarray",
