switch to interval_[start/end] + allow forecast non-zero first step (#64)
* switch to interval_[start/end] + allow forecast to have non-zero first step time

* fix test

* remove unneeded param check

--- a/tests/test_data/configs/test_config.yaml
+++ b/tests/test_data/configs/test_config.yaml
@@ -1,35 +1,36 @@
 general:
   description: test example configuration
   name: example
+
 input_data:
   gsp:
     zarr_path: tests/data/gsp/test.zarr
-    history_minutes: 60
-    forecast_minutes: 120
+    interval_start_minutes: -60
+    interval_end_minutes: 120
     time_resolution_minutes: 30
     dropout_timedeltas_minutes: [-30]
     dropout_fraction: 0.1
   nwp:
     ukv:
+      zarr_path: tests/data/nwp_data/test.zarr
+      provider: "ukv"
+      interval_start_minutes: -60
+      interval_end_minutes: 120
+      time_resolution_minutes: 60
       channels:
         - t
       image_size_pixels_height: 2
       image_size_pixels_width: 2
-      zarr_path: tests/data/nwp_data/test.zarr
-      provider: "ukv"
-      history_minutes: 60
-      forecast_minutes: 120
-      time_resolution_minutes: 60
       dropout_timedeltas_minutes: [-180]
       dropout_fraction: 1.0
+      max_staleness_minutes: null
 
   satellite:
+    zarr_path: tests/data/sat_data.zarr
+    time_resolution_minutes: 15
+    interval_start_minutes: -60
+    interval_end_minutes: 0
     channels:
       - IR_016
     image_size_pixels_height: 24
     image_size_pixels_width: 24
-    zarr_path: tests/data/sat_data.zarr
-    time_resolution_minutes: 15
-    history_minutes: 60
-    forecast_minutes: 0
-    live_delay_minutes: 0
