--- a/tests/test_data/configs/pvnet_test_config.yaml
+++ b/tests/test_data/configs/pvnet_test_config.yaml
@@ -6,8 +6,8 @@ input_data:
 
   gsp:
     zarr_path: set_in_temp_file
-    history_minutes: 60
-    forecast_minutes: 120
+    interval_start_minutes: -60
+    interval_end_minutes: 120
     time_resolution_minutes: 30
     dropout_timedeltas_minutes: null
     dropout_fraction: 0
@@ -16,8 +16,8 @@ input_data:
     ukv:
       provider: ukv
       zarr_path: set_in_temp_file
-      history_minutes: 60
-      forecast_minutes: 120
+      interval_start_minutes: -60
+      interval_end_minutes: 120
       time_resolution_minutes: 60
       channels:
         - t # 2-metre temperature
@@ -29,9 +29,8 @@ input_data:
 
   satellite:
     zarr_path: set_in_temp_file
-    history_minutes: 30
-    forecast_minutes: 0
-    live_delay_minutes: 0
+    interval_start_minutes: -30
+    interval_end_minutes: 0
     time_resolution_minutes: 5
     channels:
       - IR_016
