--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -2,6 +2,8 @@ name: Python package tests
 
 on:
   push:
+  pull_request:
+    types: [opened, reopened, synchronize]
   schedule:
     - cron: "0 12 * * 1"
 jobs:
