--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -18,5 +18,4 @@ jobs:
       #sudo_apt_install: "libgeos++-dev libproj-dev proj-data proj-bin"
       #      brew_install: "proj geos librttopo"
       os_list: '["ubuntu-latest"]'
-    env:
-      PYTHON_VERSION: "3.11"
+      python_version: "3.11"
