--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [ # Migration from requirements.txt
     "numpy",
     "pandas",
     "xarray",
-    "zarr",
+    "zarr==2.18.4",
     "dask",
     "ocf_blosc2",
     "pvlib",
