--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,30 +1,21 @@
 name: Lint
 
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+on: [push]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Install Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-          
+          python-version: '3.11'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install ruff
-          
-      - name: Run Ruff
-        run: |
-          # Check style and quality
-          ruff check .
-          # Check formatting
-          ruff format --check .
+      - name: Run Ruff linting
+        run: ruff check --output-format=github .
+      - name: Run Ruff formatting
+        run: ruff format --check .
