--- a/ruff.toml
+++ b/ruff.toml
@@ -1,10 +1,8 @@
-# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
-select = ["B", "E", "F", "D", "I"]
-ignore = ["D200","D202","D210","D212","D415","D105",]
-
-# Allow autofix for all enabled rules (when `--fix`) is provided.
-fixable = ["A", "B", "C", "D", "E", "F", "I"]
-unfixable = []
+# Project configuration
+line-length = 100
+target-version = "py311"
+output-format = "github" # Add GitHub-specific output formatting
+fix = true
 
 # Exclude a variety of commonly ignored directories.
 exclude = [
@@ -31,25 +29,25 @@ exclude = [
     "tests",
 ]
 
-# Same as Black.
-line-length = 100
+[lint]
+# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
+select = ["B", "E", "F", "D", "I"]
+ignore = ["D200", "D202", "D210", "D212", "D415", "D105"]
+
+# Allow autofix for all enabled rules (when `--fix`) is provided.
+fixable = ["A", "B", "C", "D", "E", "F", "I"]
+unfixable = []
 
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-# Assume Python 3.10.
-target-version = "py310"
-fix = false
+# Per-file ignore rules
+per-file-ignores = { "__init__.py" = ["F401", "E402"] }
 
-ignore-init-module-imports = true
-
-[mccabe]
+[lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
 
-[pydocstyle]
+[lint.pydocstyle]
 # Use Google-style docstrings.
 convention = "google"
-
-[per-file-ignores]
-"__init__.py" = ["F401", "E402"]
