--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [ # Migration from requirements.txt
     "pyaml_env",
     "pyresample",
     "matplotlib",
+    "h5netcdf",
 ]
 
 keywords = [ # I've added some keywords, but please provide feedback if you'd like them changed!
