--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [ # Migration from requirements.txt
     "pathy",
     "pyaml_env",
     "pyresample",
+    "h5netcdf",
 ]
 
 keywords = [ # I've added some keywords, but please provide feedback if you'd like them changed!
