--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [ # Migration from requirements.txt
     "pyproj",
     "pathy",
     "pyaml_env",
-    "pyresample"
+    "pyresample",
+    "h5netcdf",
 ]
 
 keywords = [ # I've added some keywords, but please provide feedback if you'd like them changed!
@@ -50,6 +51,9 @@ requires-python = ">=3.8"
 docs = [
     "mkdocs>=1.2",
     "mkdocs-material>=8.0"
+]
+plot = [
+    "matplotlib"
 ]
 
 [project.urls]
