--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,7 @@ build-backend = "setuptools.build_meta"
 # Metadata (see https://peps.python.org/pep-0621/)
 [project]
 name = "ocf-data-sampler"
-version = "0.1.10"
-description = "Sample from weather data for renewable energy prediction"
+dynamic = ["version"] # Set automtically using git: https://setuptools-git-versioning.readthedocs.io/en/stable/
 readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.10"
 license = { text = "MIT License" }
@@ -58,6 +57,10 @@ exclude = ["test*"]
 
 [tool.setuptools.package-data]
 "*" = ["*.csv"]
+
+[tool.setuptools-git-versioning]
+enabled = true
+
 
 # --- LINTING AND TYPING CONFIGURATION --- #
 
