--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dev = [
     "ruff >= 0.9.2",
     # LSP Support
     "python-lsp-server",
-    # "pylsp-mypy",
+    "pylsp-mypy",
     "python-lsp-ruff",
 ]
 
