fix(workflow): Correct test folder

--- a/.github/workflows/branch_ci.yml
+++ b/.github/workflows/branch_ci.yml
@@ -12,4 +12,5 @@ jobs:
       enable_linting: true
       enable_typechecking: false
       containerfile: '' # No container to be built
+      tests_folder: 'tests'
 
