fix(workflows): Don't try to build containers

--- a/.github/workflows/branch_ci.yml
+++ b/.github/workflows/branch_ci.yml
@@ -11,6 +11,6 @@ jobs:
     with:
       enable_linting: true
       enable_typechecking: false
-      containerfile: '' # No container to be built
+      containerfile: 'None'
       tests_folder: 'tests'
 
