--- a/.github/workflows/merged_ci.yml
+++ b/.github/workflows/merged_ci.yml
@@ -10,5 +10,5 @@ jobs:
     uses: openclimatefix/.github/.github/workflows/default_branch_pr_merged_ci.yml@main
     secrets: inherit
     with:
-      containerfile: '' # No container to build
+      containerfile: 'None'
 
