--- a/tests/test_data/configs/pvnet_test_config.yaml
+++ b/tests/test_data/configs/pvnet_test_config.yaml
@@ -9,7 +9,7 @@ input_data:
     interval_start_minutes: -60
     interval_end_minutes: 120
     time_resolution_minutes: 30
-    dropout_timedeltas_minutes: null
+    dropout_timedeltas_minutes: []
     dropout_fraction: 0
 
   nwp:
@@ -36,5 +36,5 @@ input_data:
       - IR_016
     image_size_pixels_height: 2
     image_size_pixels_width: 2
-    dropout_timedeltas_minutes: null
+    dropout_timedeltas_minutes: []
     dropout_fraction: 0
