--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,33 @@
+# --- PROJECT CONFIGURATION --- #
+
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
 build-backend = "setuptools.build_meta"
 
+# Metadata (see https://peps.python.org/pep-0621/)
 [project]
-name = "ocf_data_sampler"
-version = "0.1.11"
-license = { file = "LICENSE" }
-readme = "README.md"
-description = "Sample from weather data for renewable energy prediction"
+name = "ocf-data-sampler"
+dynamic = ["version"] # Set automtically using git: https://setuptools-git-versioning.readthedocs.io/en/stable/
+readme = { file = "README.md", content-type = "text/markdown" }
+requires-python = ">=3.10"
+license = { text = "MIT License" }
 authors = [
-    {name = "James Fulton, Peter Dudfield, and the Open Climate Fix team"},
-    {email = "info@openclimatefix.org"}
+    { name = "Open Climate Fix team", email = "info@openclimatefix.org" },
+    { name = "James Fulton" },
+    { name = "Peter Dudfield" },
 ]
-
-maintainers = [
-    {name="Open Climate Fix Ltd"}
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
 ]
-
-dependencies = [ # Migration from requirements.txt
+dependencies = [
     "torch",
     "numpy",
     "pandas",
     "xarray",
     "zarr==2.18.3",
     "dask",
+    "matplotlib",
     "ocf_blosc2",
     "pvlib",
     "pydantic",
@@ -34,36 +38,98 @@ dependencies = [ # Migration from requirements.txt
     "h5netcdf",
 ]
 
-keywords = [ # I've added some keywords, but please provide feedback if you'd like them changed!
-    "weather data",
-    "renewable energy prediction",
-    "sample weather data"   
-]
-
-classifiers = [
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3.8", # Sourced from .readthedocs.yml (please advise if this is wrong!)
-    "Operating System :: POSIX :: Linux", # Sourced from .github/workflows/workflows.yaml
-]
-requires-python = ">=3.8"
-
-[project.optional-dependencies]
-docs = [
-    "mkdocs>=1.2",
-    "mkdocs-material>=8.0"
-]
-plot = [
-    "matplotlib"
+[dependency-groups]
+dev = [
+    # Testing
+    "pytest",
+    "ruff >= 0.9.2",
+    # LSP Support
+    "python-lsp-server",
+    "python-lsp-ruff",
 ]
 
 [project.urls]
-homepage = "https://github.com/openclimatefix"
 repository = "https://github.com/openclimatefix/ocf-data-sampler"
 
-[tool.setuptools]
-packages = { find = {} } # Replaces the find_packages() in the setup.py
-include-package-data = true
+[tool.setuptools.packages.find]
+where = ["."]
+exclude = ["test*"]
 
+[tool.setuptools.package-data]
+"*" = ["*.csv"]
+
+[tool.setuptools-git-versioning]
+enabled = true
+
+
+# --- LINTING AND TYPING CONFIGURATION --- #
+
+# MyPy configuration
+# * See https://mypy.readthedocs.io/en/stable/index.html
+[tool.mypy]
+python_version = "3.12"
+strict = true
+warn_unreachable = true
+warn_return_any = true
+disallow_untyped_defs = true
+plugins = [
+    "numpy.typing.mypy_plugin",
+]
+
+[[tool.mypy.overrides]]
+# Ignore missing imports for libraries that don't have them.
+# If they are ever made, remove from here!
+module = [
+    "fsspec",
+    "s3fs",
+    "zarr",
+]
+ignore_missing_imports = true
+
+# Ruff configuration
+# * See https://beta.ruff.rs/docs/
 [tool.ruff]
 line-length = 100
-exclude = ["tests","data","scripts"]
+indent-width = 4
+exclude = ["__init__.py"]
+
+[tool.ruff.lint]
+select = [
+    "F",   # pyflakes
+    "E",   # pycodestyle
+    "W",   # whitespace and newlines
+    "I",   # isort
+    "UP",  # modernize
+    "ANN", # flake8 type annotations
+    "S",   # flake8 bandit
+    "B",   # flake8 bugbear
+    "C4",  # flake8 comprehensions
+    "COM", # flake8 commas
+    "T20", # flake8 print
+    "SIM", # flake8 simplify
+    "ARG", # flake8 unused arguments
+    "DTZ", # flake8 datetimes
+    "Q",   # flake8 quotes
+    "TCH", # flake8 typecheck
+    "D",   # pydocstyle
+    "RUF", # ruff-specific rules
+]
+fixable = ["ALL"]
+ignore = [
+    "D203", "D213", "D215", "D400", "D401", "D404", "D406",
+    "D407", "D408", "D409", "D413",
+]
+
+[tool.ruff.lint.per-file-ignores]
+"test*" = ["D", "ANN", "S101"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+line-ending = "auto"
+docstring-code-format = true
+docstring-code-line-length = 100
+
