--- a/.github/workflows/branch_ci.yml
+++ b/.github/workflows/branch_ci.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches-ignore: ['main']
     paths-ignore: ['README.md']
+  pull_request:
+    types: [opened, edited, reopened]
+    paths-ignore: ['README.md']
 
 jobs:
   branch-ci:
