fix(workflows): Enable PyPI publishing

--- a/.github/workflows/merged_ci.yml
+++ b/.github/workflows/merged_ci.yml
@@ -11,5 +11,5 @@ jobs:
     secrets: inherit
     with:
       containerfile: 'None'
-      pypi_token: ${{ secrets.PYPI_API_TOKEN }}
+      enable_pypi: true
 
