--- a/tests/test_data/configs/pvnet_test_config.yaml
+++ b/tests/test_data/configs/pvnet_test_config.yaml
@@ -26,6 +26,10 @@ input_data:
       dropout_timedeltas_minutes: [-180]
       dropout_fraction: 1.0
       max_staleness_minutes: null
+      normalisation_constants:
+        t:
+          mean: 283.64913206
+          std: 4.38818501
 
   satellite:
     zarr_path: set_in_temp_file
@@ -38,3 +42,7 @@ input_data:
     image_size_pixels_width: 2
     dropout_timedeltas_minutes: []
     dropout_fraction: 0
+    normalisation_constants:
+      IR_016:
+        mean: 0.17594202
+        std: 0.21462157
