fix(branch-ci): Run with test matrix

--- a/.github/workflows/branch_ci.yml
+++ b/.github/workflows/branch_ci.yml
@@ -1,19 +1,18 @@
-name: Non-Default Branch Push CI (Python)
-on:
+name: Branch CI (Python)
+run-name: 'Test branch commit "${{ github.event.head_commit.message }}"'
+
+on:  
   push:
-    branches-ignore: ['main']
-    paths-ignore: ['README.md']
-  pull_request:
-    types: [opened, edited, reopened]
+    branches-ignore: [ "main" ]
     paths-ignore: ['README.md']
 
 jobs:
   branch-ci:
-    uses: openclimatefix/.github/.github/workflows/nondefault_branch_push_ci_python.yml@main
+    uses: openclimatefix/.github/.github/workflows/branch_ci.yml@main
     secrets: inherit
     with:
       enable_linting: true
       enable_typechecking: false
       containerfile: 'None'
-      tests_folder: 'tests'
-
+      tests_folder: "tests"
+      tests_matrix: true
