--- a/.github/workflows/branch_ci.yml
+++ b/.github/workflows/branch_ci.yml
@@ -14,5 +14,5 @@ jobs:
       enable_linting: true
       enable_typechecking: false
       containerfile: 'None'
-      tests_folder: "tests"
+      tests_folder: 'tests'
       tests_matrix: true
