--- a/.github/workflows/pull_ci.yml
+++ b/.github/workflows/pull_ci.yml
@@ -3,23 +3,13 @@ run-name: 'Test PR edit #${{ github.event.number }} "${{ github.event.pull_reque
 
 on:
   pull_request:
-    types: [opened, edited, reopened]
     paths-ignore: ['README.md']
 
 jobs:
 
-  echo:
-    runs-on: ubuntu-latest
-    env:
-      REPO_NAME: ${{ github.event.pull_request.head.repo.name }}
-      REPOSITORY_NAME: ${{ github.repository }}
-    steps:
-      - name: Echo variables
-        run: echo "$REPO_NAME" "$REPOSITORY_NAME"
-
   pull-ci:
     uses: openclimatefix/.github/.github/workflows/branch_ci.yml@main
-    if: ${{ github.event.pull_request.head.repo.name != github.repository }}
+    if: ${{ github.event.pull_request.head.repo.fork }}
     with:
       enable_linting: true
       enable_typechecking: false
