fix(branch-ci): Run with test matrix, separate concerns (#217)
* fix(branch-ci): Run with test matrix

* Create pull_ci.yml

* Update merged_ci.yml

* Create tagged_ci.yml

* Update branch_ci.yml

* Update pull_ci.yml

* Update merged_ci.yml

* Update pull_ci.yml

* Update pull_ci.yml

* Update pull_ci.yml

* Update pull_ci.yml

--- a/.github/workflows/pull_ci.yml
+++ b/.github/workflows/pull_ci.yml
@@ -1,15 +1,15 @@
-name: Branch CI (Python)
-run-name: 'Test branch commit "${{ github.event.head_commit.message }}"'
+name: Pull CI (Python)
+run-name: 'Test PR edit #${{ github.event.number }} "${{ github.event.pull_request.title }}"'
 
-on:  
-  push:
-    branches-ignore: [ "main" ]
+on:
+  pull_request:
     paths-ignore: ['README.md']
 
 jobs:
-  branch-ci:
+
+  pull-ci:
     uses: openclimatefix/.github/.github/workflows/branch_ci.yml@main
-    secrets: inherit
+    if: ${{ github.event.pull_request.head.repo.fork }}
     with:
       enable_linting: true
       enable_typechecking: false
