--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "pandas",
     "xarray",
     "zarr==2.18.3",
-    "numcodecs<0.16",
+    "numcodecs==0.13.1",
     "dask",
     "matplotlib",
     "ocf_blosc2",
