Validate accum channels in config (#241)
* Validate accum_channels is a subset of channels in config model

* cleanup

* Add review changes

* Update ocf_data_sampler/config/model.py

Co-authored-by: Alexandra Udaltsova <43303448+AUdaltsova@users.noreply.github.com>

* updated test config with review fixes

* Validate accum_channels is a subset of channels in config model

* cleanup

* Add review changes

* Update ocf_data_sampler/config/model.py

Co-authored-by: Alexandra Udaltsova <43303448+AUdaltsova@users.noreply.github.com>

* updated test config with review fixes

* fixed error regex

* Update tests/test_data/configs/test_config.yaml

Co-authored-by: Alexandra Udaltsova <43303448+AUdaltsova@users.noreply.github.com>

* better error check for tests/config/test_config.py

* remove hardcode from error check in tests/config/test_config.py

---------

Co-authored-by: Alexandra Udaltsova <43303448+AUdaltsova@users.noreply.github.com>

--- a/tests/test_data/configs/test_config.yaml
+++ b/tests/test_data/configs/test_config.yaml
@@ -19,6 +19,8 @@ input_data:
       time_resolution_minutes: 60
       channels:
         - t
+      accum_channels:
+        - t
       image_size_pixels_height: 2
       image_size_pixels_width: 2
       dropout_timedeltas_minutes: [-180]
@@ -28,6 +30,9 @@ input_data:
         t:
           mean: 283.64913206
           std: 4.38818501
+        diff_t:
+          mean: 0.0
+          std: 1.0
 
   satellite:
     zarr_path: tests/data/sat_data.zarr
