feat: Integrate Ice Chunk for optimized satellite loading
This commit introduces Ice Chunk support for significantly faster satellite data loading, achieving up to 1.9x performance improvement over plain Zarr.

Key changes:
- Unified satellite data loading using a single  function that intelligently dispatches to either standard Zarr or Ice Chunk based on the path.
- Simplified configuration by removing Ice Chunk-specific parameters and using a single  field.
- Optimized Ice Chunk conversion process using the  library.
- Added comprehensive benchmarking scripts to compare Ice Chunk and plain Zarr performance.

The benchmark results show a significant performance boost with Ice Chunk. This enhancement reduces data loading times and improves overall efficiency, bringing the OCF Data Sampler closer to production readiness.

The main files that were changed are:
- ocf_data_sampler/config/model.py
- ocf_data_sampler/load/satellite.py
- ocf_data_sampler/load/load_dataset.py
- scripts/full_dataset_icechunk_conversion.py
- scripts/production_benchmark_comparison.py

--- a/production_icechunk_2024-02_config.yaml
+++ b/production_icechunk_2024-02_config.yaml
@@ -4,14 +4,7 @@ general:
 
 input_data:
   satellite:
-    icechunk_path: "2024-02_icechunk_full_20250718_154450_962ca20b"
-    bucket_name: "gsoc-dakshbir"
-    use_true_icechunk: true
-    icechunk_branch: "main"
-    icechunk_commit: "MCYR0A26NXKMQTWC578G"
-    use_optimized_streaming: true
-    optimal_time_steps: 6
-    optimal_block_size_mb: 64
+    zarr_path: "gs://gsoc-dakshbir/2024-02_icechunk_full_20250727_093251_7d45f9cd.icechunk@S4DPK1PT7BB3513WZ6GG"
     channels: ['IR_016', 'IR_039', 'IR_087', 'IR_097', 'IR_108', 'IR_120', 'IR_134', 'VIS006', 'VIS008', 'WV_062', 'WV_073']
     time_resolution_minutes: 15
     interval_start_minutes: -60
