--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "numpy",
     "pandas",
     "xarray",
-    "zarr==2.18.3",
+    "zarr",
     "numcodecs==0.13.1",
     "dask",
     "matplotlib",
