--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "pandas",
     "xarray",
     "zarr",
-    "numcodecs==0.13.1",
+    "numcodecs",
     "dask",
     "matplotlib",
     "pvlib",
