install tensorstore from ocf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "pyaml_env",
     "pyresample",
     "h5netcdf",
-    "xarray-tensorstore==0.1.5",
+    "xarray-tensorstore@git+https://github.com/openclimatefix/xarray-tensorstore.git",
 ]
 
 [dependency-groups]
