--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "pyaml_env",
     "pyresample",
     "h5netcdf",
-    "tensorstore",
+    "xarray-tensorstore",
     "zarr>=3",
 ]
 
