edited existing yaml

--- a/tests/test_data/configs/site_test_config.yaml
+++ b/tests/test_data/configs/site_test_config.yaml
@@ -40,7 +40,13 @@ input_data:
 
   site: null
 
-  gsp: null
+  gsp:
+    zarr_path: tests/data/gsp/test.zarr
+    interval_start_minutes: -60
+    interval_end_minutes: 120
+    time_resolution_minutes: 30
+    dropout_timedeltas_minutes: [ -30 ]
+    dropout_fraction: 0.1
 
 
   solar_position:
