--- a/tests/test_data/configs/site_test_config.yaml
+++ b/tests/test_data/configs/site_test_config.yaml
@@ -38,7 +38,14 @@ input_data:
         mean: 0.3
         std: 0.2
 
-  site: null
+  site:
+    file_path: tests/data/site/test.nc
+    metadata_file_path: tests/data/site/test.csv
+    time_resolution_minutes: 15
+    interval_start_minutes: -60
+    interval_end_minutes: 480
+    dropout_timedeltas_minutes: []
+    dropout_fraction: 0
 
   gsp: null
 
