--- a/.github/workflows/pull_ci.yml
+++ b/.github/workflows/pull_ci.yml
@@ -6,30 +6,14 @@ on:
     paths-ignore: ['README.md']
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+
+  pull-ci:
+    uses: openclimatefix/.github/.github/workflows/branch_ci.yml@main
     if: ${{ github.event.pull_request.head.repo.fork }}
-    strategy:
-      matrix:
-        python-version: ['3.11', '3.12']
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
-    
-    - name: Run linting
-      run: |
-        ruff check .
-    
-    - name: Run tests
-      run: |
-        python -m pytest tests/ -v
+    with:
+      enable_linting: true
+      enable_typechecking: false
+      containerfile: 'None'
+      tests_folder: 'tests'
+      tests_matrix: true
+      test_python_versions: '["3.11", "3.12"]'
