--- a/tests/test_data/configs/site_test_config.yaml
+++ b/tests/test_data/configs/site_test_config.yaml
@@ -1,6 +1,6 @@
 general:
   name: "site_dataset_test_run"
-  description: "Test configuration specifically for SitesDataset"
+  description: "Test configuration specifically for PVNetDataset"
 
 input_data:
   nwp:
@@ -46,8 +46,6 @@ input_data:
     interval_end_minutes: 480
     dropout_timedeltas_minutes: []
     dropout_fraction: 0
-
-  gsp: null
 
   solar_position:
     time_resolution_minutes: 30
