Tensorstore pip bug test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "pyresample",
     "h5netcdf",
     "xarray-tensorstore==0.1.5",
+    "tensorstore==0.1.77",
     "zarr>=3",
 ]
 
