--- a/.github/workflows/contribution-bot.yml
+++ b/.github/workflows/contribution-bot.yml
@@ -6,7 +6,7 @@ on:
       - created
 
 jobs:
-  maybe-add-comment:
+  comment-nocontribution:
     uses: openclimatefix/.github/.github/workflows/internal-issue-comment.yml@main
     permissions:
       issues: write
